refactor Operation-sched tabpane to Vue 1.0.0

--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -100,7 +100,7 @@
         <edit-attr-tabpane       v-if="tabpane_active('edit_attr')"        ></edit-attr-tabpane>
         <serverspec-tabpane      v-if="tabpane_active('serverspec')"       ></serverspec-tabpane>
         <serverspec-results-tabpane v-if="tabpane_active('serverspec_results')"   :columns.once="spec_Columns" :physical_id.once="tabpaneGroupID"   ></serverspec-results-tabpane>
-        <operation-sched-tabpane v-if="tabpane_active('operation-sched')"></operation-sched-tabpane>
+        <operation-sched-tabpane v-if="tabpane_active('operation-sched')" :columns.once="ops_sched_Columns"></operation-sched-tabpane>
     </div>
   </div>
 </div>
