--- a/app/views/vue/_operation_sched_tabpane.html.erb
+++ b/app/views/vue/_operation_sched_tabpane.html.erb
@@ -8,25 +8,25 @@
   <span id="loading_results"><div class="loader"></div> <%= t 'common.msg.loading' %></span>
   <table class="table table-hover ssp">
     <tr>
-      <th v-repeat="key: columns"
-          v-class="active: sortKey === key">
+      <th v-for="key in columns"
+          :class="{active: sortKey === key}"
+          @click="sortBy(key)">
         <text v-html="key | wrap option"></text>
-        <span v-on="click:sortBy(key)" v-if="key !== 'id' && key !== 'role'" class="glyphicon pull-right" v-class="reversed[key] ? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
-
+        <span  v-if="key !== 'id' && key !== 'role'" class="glyphicon pull-right" :class="sortOrders[key] > 0? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
       </th>
     </tr>
     </thead>
     <tbody class="tbody-infra-log">
-    <tr v-repeat="
-        entry: data
+    <tr v-for="
+        entry in data
         | filterBy filterKey
-        | orderBy sortKey reversed[sortKey]
+        | orderBy sortKey sortOrders[sortKey]
         | paginate">
-      <td v-repeat="key: columns">
+      <td v-for="key in columns">
         <text v-if="key !== message && key !== 'id'" id="{{key}}" v-html="entry[key] | listen key option lang"></text>
         <span v-if="key === 'id'">
-          <button class="btn btn-xs btn-primary"  v-on="click: get_sched(entry[key])"><%= glyphicon 'calendar' %> <%= I18n.t('operation_scheduler.btn.view_sched')%></button>
-          <button class="btn btn-xs btn-success"  v-on="click: manage_sched(entry[key])" data-toggle="modal" data-target="#manage_schedule">
+          <button class="btn btn-xs btn-primary"  @click="get_sched(entry[key])"><%= glyphicon 'calendar' %> <%= I18n.t('operation_scheduler.btn.view_sched')%></button>
+          <button class="btn btn-xs btn-success"  @click="manage_sched(entry[key])" data-toggle="modal" data-target="#manage_schedule">
           <%= glyphicon 'edit' %> <%= I18n.t('operation_scheduler.btn.manage_sched')%></button>
         </span>
       </td>
@@ -36,9 +36,9 @@
   </table>
   <nav v-if="data.length >= 10">
     <ul class="pager">
-      <li class="{{isStartPage ? 'disabled' : '' }}"><a v-on="click: showPrev()" ><span aria-hidden="true">&larr; <%= t 'monitoring.btn.prev' %></a></li>
+      <li :class="{disabled: isStartPage}"><a @click="showPrev()" ><span aria-hidden="true">&larr; <%= t 'monitoring.btn.prev' %></a></li>
       <label><%= t 'monitoring.msg.page' %>: &nbsp </label><strong v-html="pageNumber + 1"></strong> <%= t 'monitoring.msg.of' %>&nbsp<span v-html="data.length / pages  | roundup"></span>
-      <li class="{{isEndPage ? 'disabled' : '' }}"><a v-on="click: showNext()" v-attr="disabled: !isEndPage"></span><%= t 'monitoring.btn.next' %> <span aria-hidden="true">&rarr;</a></li>
+      <li :class="{disabled: isEndPage}"><a @click="showNext()" :attr="{disabled: !isEndPage}"></span><%= t 'monitoring.btn.next' %> <span aria-hidden="true">&rarr;</a></li>
     </ul>
   </nav>
 </div>
