--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -4,7 +4,7 @@
 <div v-cloak v-show="current_infra.stack">
   <h3><%= t 'infrastructures.stack_info' %>
     <small>#{{current_infra.stack.name}} :
-      <span :class="'label', status_label_class">{{current_infra.stack.status.name}}</span>
+      <span class="label" :class="status_label_class">{{current_infra.stack.status.name}}</span>
     </small>
   </h3>
 
