--- a/app/views/vue/_edit_monitoring_tabpane.html.erb
+++ b/app/views/vue/_edit_monitoring_tabpane.html.erb
@@ -14,6 +14,7 @@
 
 <%= render 'monitorings/modal_trigger_setting_description' %>
 
+
 <form>
   <div class="row" v-repeat="master: master_monitorings">
     <div class="col-md-2 col-sm-6" style="height: 32px">
@@ -61,29 +62,28 @@
     </div>
   </div>
 </form>
+<hr>
 
-
-<div v-if="before_register">
-  <h3 class="page-header"><%= I18n.t('monitoring.register_host')%></h3>
-  <div class="alert alert-warning">
-    <%= t 'monitoring.msg.before_create_host' %>
+<div class="row">
+  <div v-if="before_register">
+    <h3 class="page-header"><%= I18n.t('monitoring.register_host')%></h3>
+    <div class="alert alert-warning">
+      <%= t 'monitoring.msg.before_create_host' %>
+    </div>
+    <button v-if="!creating"  data-toggle="modal" data-target="#register-warning" class="btn btn-primary"><%= t 'monitoring.btn.create' %> </button>
+    <%= render 'monitorings/modal_trigger_register_description' %>
   </div>
-  <button v-if="!creating"  data-toggle="modal" data-target="#register-warning" class="btn btn-primary"><%= t 'monitoring.btn.create' %> </button>
-  <div-loader v-if="creating"></div-loader>
-  <%= render 'monitorings/modal_trigger_register_description' %>
-</div>
 
-<div class="col-md-12 col-sm-12" v-if="!before_register">
-  <div-loader v-if="loading"></div-loader>
-  <h4 class="page-header"><%= t 'monitoring.linked_templates' %> <small>
-    <a href="#" data-toggle="modal" data-target="#edit-templates" class="btn-link"><span class="glyphicon glyphicon-edit"></span><%= t 'monitoring.btn.edit' %></a></small>
-  </h4>
-  <ul v-repeat="l: templates">
-    <li v-if="l.checked">{{l.name}}</li>
-  </ul>
-  <%= render 'monitorings/modal_update_templates' %>
+  <div class="col-md-12 col-sm-12" v-if="!before_register">
+    <h4 class="page-header"><%= t 'monitoring.linked_templates' %> <small>
+      <a href="#" data-toggle="modal" data-target="#edit-templates" class="btn-link"><span class="glyphicon glyphicon-edit"></span><%= t 'monitoring.btn.edit' %></a></small>
+    </h4>
+    <ul v-repeat="l: templates">
+      <li v-if="l.checked">{{l.name}}</li>
+    </ul>
+    <%= render 'monitorings/modal_update_templates' %>
+  </div>
 </div>
-
 
 
 <div class="form-actions-top">
