--- a/app/views/monitorings/_modal_trigger_setting_add.html.erb
+++ b/app/views/monitorings/_modal_trigger_setting_add.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" @click="add_step()" :attr="{disabled: add_step_err()}">Add</button>
+        <button type="button" class="btn btn-primary" @click="add_step()" :disabled="add_step_err()">Add</button>
       </div>
     </div>
   </div>
