--- a/app/views/vue/_index.html.erb
+++ b/app/views/vue/_index.html.erb
@@ -35,7 +35,7 @@
     <ul class="pager">
       <li :class="{disabled: isStartPage}"><a @click="showPrev()" ><span aria-hidden="true">&larr; <%= t 'monitoring.btn.prev' %></a></li>
         <label><%= t 'monitoring.msg.page' %>: &nbsp </label><strong v-html="pageNumber + 1"></strong> <%= t 'monitoring.msg.of' %>&nbsp<span v-html="data.length / pages  | roundup"></span>
-      <li :class="{disabled: isEndPage}"><a @click="showNext()" :attr="{disabled: !isEndPage}"></span><%= t 'monitoring.btn.next' %> <span aria-hidden="true">&rarr;</a></li>
+      <li :class="{disabled: isEndPage}"><a @click="showNext()" :disabled="!isEndPage"></span><%= t 'monitoring.btn.next' %> <span aria-hidden="true">&rarr;</a></li>
     </ul>
   </nav>
 </script>
