--- a/app/views/monitorings/_modal_update_templates.html.erb
+++ b/app/views/monitorings/_modal_update_templates.html.erb
@@ -12,14 +12,14 @@
           <form>
             <div class="checkbox" v-for="t in dispItems">
               <label class="checkbox">
-                <input type="checkbox" :attr="{checked: t.checked}" v-model="t.checked" id="inputEmail3">{{t.name}}
+                <input type="checkbox" :checked="t.checked" v-model="t.checked" id="inputEmail3">{{t.name}}
               </label>
             </div>
           </form>
           <nav>
             <ul class="pager">
               <li class="{{isStartPage ? 'disabled' : '' }}"><a @click="showPrev" ><span aria-hidden="true">&larr; <%= t 'monitoring.btn.prev' %></a></li>
-              <li class="{{isEndPage ? 'disabled' : '' }}"><a   @click="showNext" :attr="{disabled: !isEndPage}"></span><%= t 'monitoring.btn.next' %> <span aria-hidden="true">&rarr;</a></li>
+              <li class="{{isEndPage ? 'disabled' : '' }}"><a   @click="showNext" :disabled="!isEndPage"></span><%= t 'monitoring.btn.next' %> <span aria-hidden="true">&rarr;</a></li>
             </ul>
             <label><%= t 'monitoring.msg.page' %> </label><strong v-html="page + 1"></strong> <%= t 'monitoring.msg.of' %><span v-html="templates.length / 10 | roundup"></span>
           </nav>
@@ -27,7 +27,7 @@
 
 	<div class="modal-footer">
     <button @click="close()" type="button" class="btn btn-default" data-dismiss="modal"><%= t 'monitoring.btn.close' %></button>
-    <button @click="update_templates()" type="button" :attr="{disabled: !has_selected}" class="btn btn-primary"  data-dismiss="{{has_selected ? 'modal' : ''}}"><%= t 'monitoring.btn.save' %></button>
+    <button @click="update_templates()" type="button" :disabled="!has_selected" class="btn btn-primary"  data-dismiss="{{has_selected ? 'modal' : ''}}"><%= t 'monitoring.btn.save' %></button>
 	</div>
       </div>
     </div>
