--- a/app/views/serverspecs/_gen_resource.html.erb
+++ b/app/views/serverspecs/_gen_resource.html.erb
@@ -12,14 +12,11 @@
         <label>
           <%= t('serverspecs.generator.resource_type') %>:
         </label>
-          <select class="form-control" v-model="desc.resourceType">
-            <% resource_types.each do |type| %>
-              <option><%= type %></option>
-            <% end %>
+          <select class="form-control" v-model="desc.resourceType" options="resourceTypesOpt">
           </select>
       </div>
       <div class="form-group">
-          <a href="http://serverspec.org/resource_types.html#{{desc.resourceType}}" target="_blank">Ref</a>
+        <a href="http://serverspec.org/resource_types.html#{{desc.resourceType}}" target="_blank">Ref</a>
       </div>
     </form>
 
