--- a/app/views/serverspecs/_gen_it.html.erb
+++ b/app/views/serverspecs/_gen_it.html.erb
@@ -10,18 +10,10 @@
   <div class="panel-body collapse in">
     <div class="form-group" v-if="it.type === 'its'">
       <selectable-input label="Name" options="{{resource.its_targets}}" selected="{{@ it.name}}"></selectable-input>
-
-      <label>
-        Name
-        <input type="text" class="form-control" required v-model="it.name">
-      </label>
     </div>
 
     <div class="form-group">
-      <label>
-        Matcher
-        <input type="text" class="form-control" required v-model="it.matcher.name">
-      </label>
+      <selectable-input label="Matcher" options="{{resource.matchers}}" selected="{{@ it.matcher.name}}"></selectable-input>
     </div>
 
     <div class="form-group">
