Enable to work ServerState button.

--- a/app/views/layouts/_navbar_bottom.html.erb
+++ b/app/views/layouts/_navbar_bottom.html.erb
@@ -6,11 +6,13 @@
     <div class="navbar-text pull-right">
       <script id="toggle-button-template" type="text/template">
       <span v-show="state">
-        <bootstrap-tooltip title="{{tooltip}}">
-          <button class="btn btn-xs" v-attr="disabled: is_inprogress" v-on="click: toggle()" v-class="btn_class">
-            <span v-class="blinking: is_inprogress" class="glyphicon glyphicon-off"></span>&nbsp;
-            <span v-text="status_text"></span>
-          </button>
+        <bootstrap-tooltip :title="tooltip">
+          <template slot="content">
+            <button class="btn btn-xs" :disabled="is_inprogress" @click="toggle()" :class="[btn_class]">
+              <span :class="{blinking: is_inprogress}" class="glyphicon glyphicon-off"></span>&nbsp;
+              <span v-text="status_text"></span>
+            </button>
+          </template>
         </bootstrap-tooltip>
       </span>
       </script>
