--- a/app/views/users_admin/_edit.html.erb
+++ b/app/views/users_admin/_edit.html.erb
@@ -37,12 +37,11 @@
     <h5 class="page-header"><%=t('users.mfa')%></h5>
     <div v-if="user.mfa_use">
       <p><%=t('users.msg.mfa_used')%></p>
-      <button class="btn btn-sm btn-default" v-on="click: update_mfa()" v-attr="disabled: update_mfa_key || remove_mfa_key"><%=t('users.change_mfa_secret')%></button>
-      <button class="btn btn-sm btn-danger"  v-on="click: remove_mfa()" v-attr="disabled: update_mfa_key || remove_mfa_key"><%=t('users.use_stop_mfa')%></button>
+      <button class="btn btn-sm btn-default" @click="update_mfa()" :disabled="update_mfa_key || remove_mfa_key"><%=t('users.change_mfa_secret')%></button>
+      <button class="btn btn-sm btn-danger"  @click="remove_mfa()" :disabled="update_mfa_key || remove_mfa_key"><%=t('users.use_stop_mfa')%></button>
     </div>
-
-    <div v-if="!user.mfa_use">
-      <button class="btn btn-sm btn-primary" v-on="click: update_mfa()"><%=t('users.use_start_mfa')%></button>
+    <div v-else>
+      <button class="btn btn-sm btn-primary" @click="update_mfa()"><%=t('users.use_start_mfa')%></button>
     </div>
 
     <div v-if="update_mfa_key">
@@ -63,17 +62,19 @@
 <div class="col-md-7 col-sm-7">
   <div class="col-md-5 col-sm-5 form-group">
     <h5 class="page-header"><%= t('clients.client') %></h5>
-    <select size="2" v-model="selected_client" number options="clients" class="form-control admin-selectbox-height" v-on="click: get_projects()">
+    <select size="2" v-model="selected_client" number class="form-control admin-selectbox-height" @click="get_projects()">
+      <option v-for="o in clients" :value="o.value">{{o.text}}</option>
     </select>
   </div>
   <div class="col-sm-7 col-md-7 form-group">
     <h5 class="page-header"><%= t('projects.project') %></h5>
-    <select multiple="multiple" v-model="selected_projects" number options="projects" class="form-control admin-selectbox-height" v-on="dblclick: add()">
+    <select multiple="multiple" v-model="selected_projects" number class="form-control admin-selectbox-height" @dblclick="add()">
+      <option v-for="o in projects" :value="o.value">{{o.text}}</option>
     </select>
   </div>
   <div class="col-sm-12 col-md-12">
     <div class="form-group">
-      <button class="btn btn-default pull-right" v-on="click: add()">
+      <button class="btn btn-default pull-right" @click="add()">
         <span class="glyphicon glyphicon-plus"></span>
       </button>
     </div>
@@ -87,14 +88,15 @@
 
     <div class="col-sm-12 col-md-12">
       <div class="form-group">
-        <select multiple="multiple" class="form-control admin-selectbox-height" v-model="selected_allowed_projects" number options="allowed_projects" v-on="dblclick: del()">
+        <select multiple="multiple" class="form-control admin-selectbox-height" v-model="selected_allowed_projects" number @dblclick="del()">
+          <option v-for="o in allowed_projects" :value="o.value">{{o.text}}</option>
         </select>
       </div>
     </div>
 
     <div class="col-sm-12 col-md-12">
       <div class="form-group">
-        <button class="btn btn-default" v-on="click: del()">
+        <button class="btn btn-default" @click="del()">
           <span class="glyphicon glyphicon-trash"></span>
         </button>
       </div>
@@ -104,7 +106,7 @@
 
 <div class="col-md-12 col-sm-12">
   <div class="form-actions-top">
-    <button class="btn btn-primary btn-sm" v-on="click: submit()">
+    <button class="btn btn-primary btn-sm" @click="submit()">
       <%= t('common.btn.save_changes') %>
     </button>
   </div>
