Enable to work serverspec-gen. However, can't remove panel

--- a/app/views/serverspecs/_gen_it.html.erb
+++ b/app/views/serverspecs/_gen_it.html.erb
@@ -1,19 +1,21 @@
 <div class="panel panel-info">
   <div class="panel-heading">
-    <button class="btn btn-danger pull-right btn-xs" v-on="click: $parent.removeIt(idx)"><span class="glyphicon glyphicon-remove"></span></button>
-    <text class="pull-right">&nbsp&nbsp</text>
-    <button class="btn btn-default pull-right btn-xs" v-on="click: accordionToggle"><span class="glyphicon glyphicon-chevron-down"></span></button>
+    <button class="btn btn-danger pull-right btn-xs" @click="$parent.removeIt(idx)"><span class="glyphicon glyphicon-remove"></span></button>
+
+    <!--what's this?-->
+    <span class="pull-right">&nbsp&nbsp</span>
+    <button class="btn btn-default pull-right btn-xs" @click="accordionToggle"><span class="glyphicon glyphicon-chevron-down"></span></button>
     <h3 v-if="it.type === 'it'"  class="panel-title">{{it.matcher.name}}</h3>
     <h3 v-if="it.type === 'its'" class="panel-title">{{it.name}} {{it.matcher.name}}</h3>
   </div>
 
   <div class="panel-body collapse in">
     <div class="form-group" v-if="it.type === 'its'">
-      <selectable-input label="Name" options="{{resource.its_targets}}" selected="{{@ it.name}}"></selectable-input>
+      <selectable-input label="Name" :options="resource.its_targets" :selected.sync="it.name"></selectable-input>
     </div>
 
     <div class="form-group">
-      <selectable-input label="Matcher" options="{{resource.matchers}}" selected="{{@ it.matcher.name}}"></selectable-input>
+      <selectable-input label="Matcher" :options="resource.matchers" :selected.sync="it.matcher.name"></selectable-input>
     </div>
 
     <div class="form-group">
