--- a/app/views/serverspecs/_gen_selectable_input.html
+++ b/app/views/serverspecs/_gen_selectable_input.html
@@ -1,13 +1,15 @@
-<label v-text="label" v-attr="for: id"></label>
+<label v-text="label" :for="id"></label>
 
 <label class="pull-right" v-if="!force_manual">
   Manual: <input type="checkbox" v-model="manual_check">
 </label>
 
 <div v-if="manual">
-  <input v-attr="id: id" type="text" class="form-control" required v-model="selected">
+  <input :id="id" type="text" class="form-control" required v-model="selected">
 </div>
 
-<div v-if="!manual">
-  <select v-attr="id: id" class="form-control" v-model="selected" options="opt"></select>
+<div v-else>
+  <select :id="id" class="form-control" v-model="selected">
+    <option v-for="o in options" :value="o">{{o}}</option>
+  </select>
 </div>
