--- a/app/views/serverspecs/generator.html.erb
+++ b/app/views/serverspecs/generator.html.erb
@@ -11,12 +11,12 @@
     <div class="col-xs-6">
 
       <h3><%=t('serverspecs.generator.resources')%></h3>
-      <button class="btn btn-default" v-on="click: addDescribe()">
+      <button class="btn btn-default" @click="addDescribe()">
         <span class="glyphicon glyphicon-plus-sign"></span> <%=t('serverspecs.generator.add_resource')%>
       </button>
 
-      <div v-repeat="desc: ast">
-        <resource-panel desc="{{@ desc}}" idx="{{$index}}" serverspec_info="{{info}}"></resource-panel>
+      <div v-for="desc in ast">
+        <resource-panel :desc.sync="desc" :idx="$index" :serverspec_info="info"></resource-panel>
       </div>
     </div>
 
@@ -28,7 +28,7 @@
   </div>
 
   <div class="row form-actions-top">
-    <button class="btn btn-primary" v-on="click: save()"><%=t('helpers.titles.save')%></button>
+    <button class="btn btn-primary" @click="save()"><%=t('helpers.titles.save')%></button>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
       serverspecs_path(infrastructure_id: @infra.try(:id)), class: 'btn-default btn' %>
   </div>
